# app_institucional

./: .env  .env.example  .gitignore  icons.txt  main.py  pyproject.toml  requirements.txt  setup.py
app_institucional.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
core/: ia_cliente.py  procesador_pdf.py
data/: app_datos.db
data/chroma_db/: chroma.sqlite3
database/: db_manager.py  modelos.py  vector_store.py
src/: main.py
src/application/dto/: __init__.py  documento_dto.py
src/application/use_cases/: __init__.py  guardar_documento.py  procesar_documento.py
src/domain/entities/: __init__.py  documento.py
src/domain/repositories/: __init__.py  document_repository.py
src/domain/value_objects/: __init__.py
src/infrastructure/: config.py
src/infrastructure/ai/: ia_cliente.py
src/infrastructure/pdf/: procesador_pdf.py
src/infrastructure/persistence/: database.py  models.py  sql_document_repository.py
src/infrastructure/vector_store/: chroma_store.py
src/presentation/flet/viewmodels/: correspondencia_viewmodel.py  correspondencia_vm.py
src/presentation/flet/views/: correspondencia_view.py
ui/: componentes.py  vistas.py
